--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,3 +1,10 @@
-node{
-    echo "welcome karim "
+pipeline{
+    agent any
+    stages{
+        stage("pint username"){
+            steps{
+                echo "welcome karim"
+            }
+        }
+    }
 }
